# volttron-server

./: AUTHORS  ChangeLog  Pipfile  pyproject.toml  setup.cfg
volttron/server/: __init__.py  __main__.py  aip.py
volttron/services/auth/: __init__.py  __main__.py  auth_service.py
volttron/services/control/: control_service.py
